UtahLiveDataTest/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Jira_Categorization__c</fullName>
        <label>Jira Categorization</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Project__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Production Bug</fullName>
                </value>
                <value>
                    <fullName>System Clarification</fullName>
                </value>
                <value>
                    <fullName>Data Manipulation</fullName>
                </value>
                <value>
                    <fullName>Other Helpdesk Activity</fullName>
                </value>
                <value>
                    <fullName>Compliment</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>Request for Change</fullName>
                </value>
                <value>
                    <fullName>New e-Book Setup</fullName>
                </value>
                <value>
                    <fullName>Test Server Issues</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>New Requirement</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Problems / Issues</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Tasks</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Training Item</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jira_Key__c</fullName>
        <description>The key associated with the JIRA issue</description>
        <externalId>true</externalId>
        <inlineHelpText>The key associated with the JIRA issue. Leave blank, will auto-populate when you click the &quot;create Issue&quot; button.</inlineHelpText>
        <label>Jira Key</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <description>Describe the problem that will be corrected by the proposed change. Indicate the experience that dictates the need for the change. Summarize the capability to make the change. Include the impact if the change is not approved.</description>
        <label>Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LastRecievedEmail__c</fullName>
        <label>Last Recieved Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <formula>LastModifiedBy.FirstName + &apos; &apos; +LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <description>Enter number estimated level of effort in number of hours</description>
        <inlineHelpText>Enter number estimated level of effort in number of hours</inlineHelpText>
        <label>Level of Effort</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_to_issue_s__c</fullName>
        <description>Issues linked to this case/issues</description>
        <label>Linked to issue(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Version__c</fullName>
        <inlineHelpText>A.B.C.D Major Version Is A.</inlineHelpText>
        <label>Major Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minor_Version__c</fullName>
        <inlineHelpText>A.B.C.D Major Version Is B.</inlineHelpText>
        <label>Minor Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>Navigation Tab in the Application</description>
        <inlineHelpText>Navigation Tab in the Application</inlineHelpText>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Pre-Application</fullName>
                </value>
                <value>
                    <fullName>Funding Opportunity</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>Closeout</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboard</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>User Management</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Estimate__c</fullName>
        <description>An estimate of how much work remains until this issue will be resolved.
The format of this is &apos; *w *d *h *m &apos; (representing weeks, days, hours and minutes - where * can be any number)
Examples: 4d, 5h 30m, 60m and 3w.</description>
        <inlineHelpText>(eg. 3w 4d 12h)</inlineHelpText>
        <label>Original Estimate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>Summary of the change control process outcomes</description>
        <inlineHelpText>Summary of the change control process outcomes</inlineHelpText>
        <label>Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>IF(ISBLANK(Owner:User.Id), /* If blank, it&apos;s a queue */
  Owner:Queue.QueueName,
  Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patch_Version__c</fullName>
        <label>Patch Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Process_Area__c</fullName>
        <label>Primary Process Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CMMI - Requirements Management</fullName>
                </value>
                <value>
                    <fullName>CMMI - Project Planning</fullName>
                </value>
                <value>
                    <fullName>CMMI - Project Monitoring and Control</fullName>
                </value>
                <value>
                    <fullName>CMMI - Supplier Agreement Management</fullName>
                </value>
                <value>
                    <fullName>CMMI - Measurement and  Analysis</fullName>
                </value>
                <value>
                    <fullName>CMMI - Process and Product Quality Assurance</fullName>
                </value>
                <value>
                    <fullName>CMMI - Configuration Management</fullName>
                </value>
                <value>
                    <fullName>CMMI - Requirements Development</fullName>
                </value>
                <value>
                    <fullName>CMMI - Technical Solution</fullName>
                </value>
                <value>
                    <fullName>CMMI - Product Integration</fullName>
                </value>
                <value>
                    <fullName>CMMI - Verification</fullName>
                </value>
                <value>
                    <fullName>CMMI - Validation</fullName>
                </value>
                <value>
                    <fullName>CMMI - Organizational Process Focus</fullName>
                </value>
                <value>
                    <fullName>CMMI - Organizational Process Definition</fullName>
                </value>
                <value>
                    <fullName>CMMI - Organizational Training</fullName>
                </value>
                <value>
                    <fullName>CMMI - Integrated Project Management</fullName>
                </value>
                <value>
                    <fullName>CMMI - Risk Management</fullName>
                </value>
                <value>
                    <fullName>CMMI - Decision Analysis and Resolution</fullName>
                </value>
                <value>
                    <fullName>CMMI - Integrated Teaming</fullName>
                </value>
                <value>
                    <fullName>CMMI - Org. Environment for Integration</fullName>
                </value>
                <value>
                    <fullName>CMMI - Integrated Supplier Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_app_failure__c</fullName>
        <label>Production app failure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_deployment_success__c</fullName>
        <label>Production deployment success</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Category__c</fullName>
        <label>Project Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OMB</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>HRSA - Products</fullName>
                </value>
                <value>
                    <fullName>Archived - HRSA (Read Only)</fullName>
                </value>
                <value>
                    <fullName>HRSA - Reports</fullName>
                </value>
                <value>
                    <fullName>HRSA Product Management</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>HRSA - Other</fullName>
                </value>
                <value>
                    <fullName>CATS</fullName>
                </value>
                <value>
                    <fullName>DFB</fullName>
                </value>
                <value>
                    <fullName>OMP - PPO</fullName>
                </value>
                <value>
                    <fullName>DOE</fullName>
                </value>
                <value>
                    <fullName>ESTO</fullName>
                </value>
                <value>
                    <fullName>HRSA - Mockups</fullName>
                </value>
                <value>
                    <fullName>ICS Product Management</fullName>
                </value>
                <value>
                    <fullName>ICS Products</fullName>
                </value>
                <value>
                    <fullName>NOAA</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>NASA - SBIR</fullName>
                </value>
                <value>
                    <fullName>DHS</fullName>
                </value>
                <value>
                    <fullName>ERIS</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BHCMIS Crosscut Reporting</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>BHCMIS Report Upgrade</fullName>
                </value>
                <value>
                    <fullName>Corporate Process Change Request</fullName>
                </value>
                <value>
                    <fullName>Corporate SharePoint</fullName>
                </value>
                <value>
                    <fullName>Corporate Tools Change Request</fullName>
                </value>
                <value>
                    <fullName>EHB Mobile</fullName>
                </value>
                <value>
                    <fullName>Enterprise Dashboard</fullName>
                </value>
                <value>
                    <fullName>Enterprise Dashboard Core</fullName>
                </value>
                <value>
                    <fullName>Environment Support - HRSA</fullName>
                </value>
                <value>
                    <fullName>GRM - Next</fullName>
                </value>
                <value>
                    <fullName>HAB Dashboard</fullName>
                </value>
                <value>
                    <fullName>HSA PMO</fullName>
                </value>
                <value>
                    <fullName>Install Manager (IMAN)</fullName>
                </value>
                <value>
                    <fullName>Internal Audit</fullName>
                </value>
                <value>
                    <fullName>JIRA Migration</fullName>
                </value>
                <value>
                    <fullName>JIRA SUPPORT</fullName>
                </value>
                <value>
                    <fullName>MS Project Server Implementation</fullName>
                </value>
                <value>
                    <fullName>OMB Operations Support</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Platform Change Request</fullName>
                </value>
                <value>
                    <fullName>Platform Support</fullName>
                </value>
                <value>
                    <fullName>Program Oversight Module</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>USASpending Data</fullName>
                </value>
                <value>
                    <fullName>USASpending Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_POC__c</fullName>
        <label>Project  POC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allison Mutter</fullName>
                </value>
                <value>
                    <fullName>Anita Kozak</fullName>
                </value>
                <value>
                    <fullName>Lubna Shah</fullName>
                </value>
                <value>
                    <fullName>Malika Khan</fullName>
                </value>
                <value>
                    <fullName>Shanequa Rutledge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Jira Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBA Technet</fullName>
                </value>
                <value>
                    <fullName>SBIR.govWebSupport</fullName>
                </value>
                <value>
                    <fullName>DHS.S-T</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Start_Date__c</fullName>
        <label>QA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_Information__c</fullName>
        <description>Provide the reference to the process assets (e.g., OPD - section 4.2, RSKM - workflow diagram).</description>
        <label>Reference Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <description>Expected Release Date.</description>
        <inlineHelpText>Expected Release Date.</inlineHelpText>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReportedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who Reported the case</description>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported_Version__c</fullName>
        <description>The version in which the issue was found</description>
        <inlineHelpText>The version in which the issue was found</inlineHelpText>
        <label>Reported Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Patch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResolutionTime_Tier1__c</fullName>
        <label>ResolutionTime_Tier1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResolutionTime_Tier2__c</fullName>
        <label>ResolutionTime_Tier2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution_Time__c</fullName>
        <inlineHelpText>ESTO Helpdesk Resolution Time</inlineHelpText>
        <label>Resolution Time</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <inlineHelpText>Root Cause of the issue</inlineHelpText>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>User Error</fullName>
                </value>
                <value>
                    <fullName>Code Issue</fullName>
                </value>
                <value>
                    <fullName>Access Issue</fullName>
                </value>
                <value>
                    <fullName>Tier 3 - Salesforce</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Change__c</fullName>
        <label>Schedule Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Level__c</fullName>
        <label>Security Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPCR Members and Reporter</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CPCR Members, Process Consultants, and Reporter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>This is the custom field for Severity</description>
        <inlineHelpText>Severity of Issue</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1(Blocker)</fullName>
                </value>
                <value>
                    <fullName>2(High)</fullName>
                </value>
                <value>
                    <fullName>3(Major)</fullName>
                </value>
                <value>
                    <fullName>4(Minor)</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_in_Favorites__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to keep a link to this case in the &apos;Favorites&apos; sidebar. Uncheck to remove.</inlineHelpText>
        <label>Show in Favorites</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>